--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,19 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="./src/assets/Logo.jpg" />
+    <link
+      rel="icon"
+      type="image/jpg"
+      sizes="32x32"
+      href="./src/assets/Logo.jpg"
+    />
+    <link
+      rel="icon"
+      type="image/jpg"
+      sizes="16x16"
+      href="./src//assets//Logo.jpg"
+    />
   </head>
   <body>
     <div id="root"></div>
